[package]
name = "kondo_bevy_ui"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17", features = [
  "experimental_bevy_feathers",
  "experimental_bevy_ui_widgets",
] }
kondo-lib = "0.8.0"
rfd = "0.15.4"

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
opt-level = 2

[profile.dev.build-override]
opt-level = 2
codegen-units = 1

[profile.release.build-override]
opt-level = 2
codegen-units = 1

[profile.release]
codegen-units = 1
lto = true
debug = "line-tables-only"

[lints.clippy]
type-complexity = "allow"
too-many-arguments = "allow"
collapsible_if = "allow"
uninlined_format_args = "allow"
