[package]
name = "kondo_bevy_ui"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
  # "ui",
  # "audio",
  "default_app",
  "default_platform",
  "picking",
  # "scene",
  "ui_api",
  "ui_bevy_render",
  "experimental_bevy_feathers",
  "experimental_bevy_ui_widgets",
] }
# bevy-inspector-egui = "0.36.0"
kondo-lib = "0.9.0"
rfd = "0.17.2"

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
opt-level = 2

[profile.dev.build-override]
opt-level = 2
codegen-units = 1

[profile.release.build-override]
opt-level = 2
codegen-units = 1

[profile.release]
codegen-units = 1
lto = "thin"
debug = false # "line-tables-only"
panic = "abort"
strip = true

[lints.clippy]
type-complexity = "allow"
too-many-arguments = "allow"
collapsible_if = "allow"
uninlined_format_args = "allow"
